force-app/main/default/objects/Board_Campaign__c/Board_Campaign__c.object-meta.xml
<CustomObject>
    <label>Board Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Campaign</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>