force-app/main/default/objects/Board_Campaign__c/fields/Board_Link__c.field-meta.xml
<CustomField>
    <fullName>Board_Link__c</fullName>
    <label>Board Link</label>
    <type>Url</type>
</CustomField>