force-app/main/default/objects/Board_Campaign__c/fields/Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Folder_Link__c</fullName>
    <label>Folder Link</label>
    <type>Url</type>
</CustomField>