force-app/main/default/objects/Board_Campaign__c/fields/OpportunityCamaign__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCamaign__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>campaign</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>